--- a/HomeWork KFU/main.html
+++ b/HomeWork KFU/main.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="stl.css"> -->
-    <link rel="stylesheet" href="stl.css">
+    <link rel="stylesheet" href="css/stl.css">
 </head>
 
 <body>
